--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -128,6 +128,7 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
+deny 2602:f704:10::1;
 deny 2602:f9f3:0:2::319;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -423,7 +424,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -723,6 +723,10 @@ deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+deny 2a12:a800:1:1:194:26:192:77;
+deny 2a12:a800:1:1:2:58:56:220;
+deny 2a12:a800:1:1:2:58:56:35;
+deny 2a12:a800:1:1:2:58:56:43;
 deny 2a12:a800:2:1:185:241:208:115;
 deny 2a12:a800:2:1:185:241:208:202;
 deny 2a12:a800:2:1:185:241:208:204;
