--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -126,7 +126,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 118.163.74.160;
+allow 118.15.13.23;
 allow 121.127.37.151;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -298,6 +298,7 @@ allow 185.129.62.63;
 allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.132.53.12;
+allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
 allow 185.153.197.227;
@@ -687,7 +688,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.228;
+allow 198.167.206.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -703,6 +704,7 @@ allow 198.98.51.249;
 allow 198.98.54.49;
 allow 198.98.57.151;
 allow 198.98.57.74;
+allow 198.98.60.90;
 allow 198.98.61.60;
 allow 198.98.62.158;
 allow 199.195.249.214;
@@ -819,7 +821,6 @@ allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:3514::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -984,6 +985,7 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
+allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1002,7 +1004,6 @@ allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
-allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
@@ -1337,6 +1338,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1820,6 +1822,7 @@ allow 5.181.80.107;
 allow 51.89.136.168;
 allow 51.91.18.151;
 allow 5.196.95.34;
+allow 5.255.100.219;
 allow 5.255.100.227;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1874,7 +1877,6 @@ allow 79.124.60.174;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.26.167;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 80.94.92.84;
@@ -1938,7 +1940,6 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.237.39;
-allow 91.229.239.28;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
