--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -984,6 +984,7 @@ deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
+deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
 deny 23.154.177.18;
@@ -1005,7 +1006,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.254;
-deny 23.184.48.78;
 deny 23.191.200.2;
 deny 23.191.200.3;
 deny 23.191.200.4;
@@ -1046,7 +1046,6 @@ deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
-deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
@@ -1336,12 +1335,16 @@ deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
-deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
+deny 2a04:52c0:106:394::1;
+deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
+deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1583,6 +1586,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1004::a2;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
@@ -1715,6 +1719,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1820,10 +1825,15 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.230.174.6;
 deny 5.255.100.219;
+deny 5.255.100.224;
 deny 5.255.100.227;
+deny 5.255.100.26;
+deny 5.255.101.10;
+deny 5.255.101.131;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
+deny 5.255.114.171;
 deny 5.255.115.58;
 deny 5.255.117.56;
 deny 5.255.118.218;
@@ -1837,7 +1847,6 @@ deny 5.255.98.151;
 deny 5.255.98.198;
 deny 5.255.98.23;
 deny 5.255.99.124;
-deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.72.110;
