--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -137,7 +137,6 @@ deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
-deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
@@ -426,12 +425,16 @@ deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
-deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
+deny 2a04:52c0:106:394::1;
+deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
+deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -673,6 +676,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1004::a2;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
