--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,6 +1,7 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
+allow 102.211.56.102;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.146.203.11;
@@ -106,7 +107,6 @@ allow 109.169.33.163;
 allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
-allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -149,6 +149,7 @@ allow 144.172.118.4;
 allow 144.172.118.41;
 allow 144.172.118.55;
 allow 144.172.118.73;
+allow 146.103.33.218;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
@@ -238,7 +239,7 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.29.146.17;
+allow 178.29.157.139;
 allow 179.35.5.78;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -927,7 +928,6 @@ allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.113.8;
-allow 205.185.114.112;
 allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
@@ -956,6 +956,7 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
+allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
@@ -979,7 +980,6 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
-allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1138,6 +1138,7 @@ allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
+allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
 allow 2620:18c:0:192::172;
 allow 2620:18c:0:192::173;
@@ -1331,7 +1332,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1578,6 +1578,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1004::a2;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
@@ -1710,6 +1711,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1816,7 +1818,6 @@ allow 5.230.174.6;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
