--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -125,7 +125,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 118.15.11.60;
+allow 118.1.102.217;
 allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
@@ -163,6 +163,7 @@ allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 154.53.39.64;
 allow 156.229.232.101;
 allow 156.229.232.104;
 allow 156.229.232.108;
@@ -1000,6 +1001,7 @@ allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
+allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
@@ -1030,6 +1032,7 @@ allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
+allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c03::f03c:95ff:fef5:a5a5;
 allow 2600:3c09::f03c:95ff:fe2d:cc40;
@@ -1580,7 +1583,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1004::a2;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
@@ -1713,7 +1715,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1764,6 +1765,7 @@ allow 45.66.35.33;
 allow 45.66.35.34;
 allow 45.66.35.35;
 allow 45.78.44.215;
+allow 45.79.144.222;
 allow 45.80.158.205;
 allow 45.80.158.23;
 allow 45.80.158.27;
