--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -125,7 +125,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 118.15.11.60;
+deny 118.1.102.217;
 deny 118.163.74.160;
 deny 121.127.37.151;
 deny 121.78.28.166;
@@ -163,6 +163,7 @@ deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.26.159.157;
+deny 154.53.39.64;
 deny 156.229.232.101;
 deny 156.229.232.104;
 deny 156.229.232.108;
@@ -1000,6 +1001,7 @@ deny 23.154.177.29;
 deny 23.154.177.30;
 deny 23.154.177.31;
 deny 23.154.177.7;
+deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.254;
@@ -1030,6 +1032,7 @@ deny 2.58.56.43;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
+deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c03::f03c:95ff:fef5:a5a5;
 deny 2600:3c09::f03c:95ff:fe2d:cc40;
@@ -1580,7 +1583,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1004::a2;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
@@ -1713,7 +1715,6 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1764,6 +1765,7 @@ deny 45.66.35.33;
 deny 45.66.35.34;
 deny 45.66.35.35;
 deny 45.78.44.215;
+deny 45.79.144.222;
 deny 45.80.158.205;
 deny 45.80.158.23;
 deny 45.80.158.27;
